<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.readyplayer.GameSetup">

    <RelativeLayout
        android:layout_width="445dp"
        android:layout_height="948dp"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/inputNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="73dp"
            android:layout_marginTop="90dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hint"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/inputNumber"
            android:layout_marginTop="291dp"
            android:text="@string/btnSelect"
            android:textSize="22dp"
            tools:text="@string/btnSelect" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="354dp"
            android:text="@string/txtResultHint"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtSetup"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btnSelect"
            android:layout_alignParentTop="true"
            android:layout_marginTop="33dp"
            android:text="@string/txtSetup"
            android:textSize="30sp" />

        <RadioGroup
            android:id="@+id/gameGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/result"
            android:layout_marginTop="143dp">

            <RadioButton
                android:id="@+id/radFirst"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtLabel"
                android:layout_alignStart="@+id/txtLabel"
                android:layout_below="@+id/inputNumber"
                android:layout_marginTop="72dp"
                android:layout_weight="1"
                android:text="@string/radFirstPlayer"
                android:textSize="22dp"
                tools:layout_editor_absoluteX="73dp"
                tools:layout_editor_absoluteY="230dp"
                tools:text="@string/radFirstPlayer" />

            <RadioButton
                android:id="@+id/radGroups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/radFirst"
                android:layout_alignStart="@+id/radFirst"
                android:layout_below="@+id/radFirst"
                android:layout_weight="1"
                android:text="Select Game Scorekeeper"
                android:textSize="22dp"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="334dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtPlayerPrompt"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/gameGroup"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="-6dp"
            android:layout_marginTop="150dp"
            android:text="@string/txtPlayerPrompt"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnGameMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnPizza"
            android:layout_alignStart="@+id/btnSelect"
            android:text="@string/btnPlayMusic" />

        <Button
            android:id="@+id/btnPizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="108dp"
            android:text="@string/btnPizza" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
