<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventSetup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imgDance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp" />

        <Button
            android:id="@+id/btnDance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="131dp"
            android:text="@string/btnStart" />

        <Button
            android:id="@+id/btnGameMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="70dp"
            android:layout_marginEnd="69dp"
            android:text="@string/btnPlayMusic"
            tools:layout_editor_absoluteX="69dp"
            tools:layout_editor_absoluteY="366dp" />

        <Button
            android:id="@+id/btnPizza"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:text="@string/btnPizza"
            tools:layout_editor_absoluteX="113dp"
            tools:layout_editor_absoluteY="436dp" />

        <TextView
            android:id="@+id/txtGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnDance"
            android:layout_centerHorizontal="true"
            android:text="Enjoy your Game!"
            android:textColor="@android:color/holo_green_light"
            android:textSize="36sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>